# Scratch

./: .gitignore  PROJECT_COMPLETION_SUMMARY.md  README.md
Plan & Progress/: Month_1.md
algorithms/: README.md  codeforces_string_task.cpp  leetcode_10_regex_matching.cpp  leetcode_146_lru_cache.cpp  leetcode_151_reverse_words.cpp  leetcode_151_reverse_words_optimized.cpp  leetcode_239_sliding_window_maximum.cpp  leetcode_295_find_median.cpp  leetcode_344_reverse_string.cpp  leetcode_355_design_twitter.cpp  leetcode_3_longest_substring.cpp  leetcode_65_valid_number.cpp  leetcode_8_atoi.cpp
feedhandler/: CMakeLists.txt  PERFORMANCE_SUMMARY.md  profile_parser.sh
feedhandler/benchmarks/: bench_parsers.cpp  results.json  ultimate_performance_test.cpp
feedhandler/docs/: branch_prediction_optimization.md  fix_protocol_reference.md  fsm_buffer_integration.md  fsm_diagram.md  fsm_parser_implementation.md  fsm_visual_diagram.txt  garbage_recovery.md  google_benchmark_report.md  lexical_analysis_basics.md  month1_completion_summary.md  naive_parser_benchmark.md  object_pool_flyweight.md  optimized_parser_benchmark.md  repeating_group_parser.md  stringview_parser_benchmark.md  tag_switch_optimization.md  threading_architecture.md  tick_spec.md  unit_test_results.md  week2_summary.md  zero_copy_parsing_guide.md
feedhandler/include/analytics/: realtime_engine.hpp
feedhandler/include/benchmarks/: hardware_profiler.hpp
feedhandler/include/common/: flyweight_tick.hpp  numa_memory_pool.hpp  tick.hpp  tick_pool.hpp  zero_latency_allocator.hpp
feedhandler/include/config/: performance_config.hpp
feedhandler/include/distributed/: cluster_computing.hpp
feedhandler/include/gpu/: cuda_parser.hpp
feedhandler/include/ml/: neural_predictor.hpp
feedhandler/include/net/: event_loop.hpp  receive_buffer.hpp  tcp_client.hpp  websocket_client.hpp
feedhandler/include/network/: rdma_transport.hpp
feedhandler/include/parser/: fast_number_parser.hpp  fsm_fix_parser.hpp  naive_fix_parser.hpp  optimized_fix_parser.hpp  repeating_group_parser.hpp  simd_fix_parser.hpp  streaming_fix_handler.hpp  stringview_fix_parser.hpp
feedhandler/include/quantum/: quantum_optimizer.hpp
feedhandler/include/threading/: message_queue.hpp  threaded_feedhandler.hpp  ultra_low_latency_queue.hpp
feedhandler/src/: feedhandler  feedhandler_demo.cpp  final_demo.cpp  fsm_design_demo.cpp  main.cpp  mock_fix_server.cpp  parser_benchmark.cpp  test_branch_prediction.cpp  test_fast_number_parser.cpp  test_fsm_parser.cpp  test_garbage_recovery.cpp  test_hardware_profiler.cpp  test_repeating_groups.cpp  test_revolutionary_features.cpp  test_simd_parser.cpp  test_streaming_handler.cpp  test_threaded_feedhandler.cpp  test_tick_pool.cpp  test_zero_latency_allocator.cpp  tick_demo.cpp
feedhandler/src/benchmarks/: hardware_profiler.cpp
feedhandler/src/common/: numa_memory_pool.cpp  tick_pool.cpp  zero_latency_allocator.cpp
feedhandler/src/gpu/: cuda_parser.cu
feedhandler/src/ml/: neural_predictor.cpp
feedhandler/src/net/: event_loop.cpp  receive_buffer.cpp  tcp_client.cpp  websocket_client.cpp
feedhandler/src/parser/: fsm_fix_parser.cpp  naive_fix_parser.cpp  optimized_fix_parser.cpp  repeating_group_parser.cpp  simd_fix_parser.cpp  streaming_fix_handler.cpp  stringview_fix_parser.cpp
feedhandler/src/threading/: threaded_feedhandler.cpp  ultra_low_latency_queue.cpp
feedhandler/tests/: fsm_parser_tests.cpp
orderbook/: CMakeLists.txt
orderbook/docs/: bid_ask_containers.md  feed_integration.md  orderbook_design.md
orderbook/include/orderbook/: book_printer.hpp  event_handler.hpp  feed_integration.hpp  market_event.hpp  order_book.hpp  price_level.hpp
orderbook/src/: test_event_handler.cpp  test_feed_integration.cpp  test_market_depth.cpp
orderbook/src/orderbook/: book_printer.cpp  event_handler.cpp  feed_integration.cpp  order_book.cpp  price_level.cpp
orderbook/tests/: order_book_tests.cpp  price_level_tests.cpp
